# l2p

./: .gitignore  Caddyfile.example  README.md  app.py  cli.py  pyproject.toml  requirements.txt
l2p/: cli.py
local2public/: cli.py
templates/: index.html
