[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local2public"
version = "0.1.1"
description = "Local to public tunnel. Github: https://github.com/sinofarmonov323/l2p"

requires-python = ">=3.10"
dependencies = [
    "httpx",
]

[project.scripts]
ltp = "local2public.cli:main"