[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local2public"
version = "0.1.2"
description = "Local to public tunnel. Github: https://github.com/sinofarmonov323/l2p"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "jinja2>=3.1.6",
]

[project.scripts]
ltp = "local2public.cli:main"
